<resources>
    <string name="app_name">TuniFy</string>

    <string name="add_to_cart">add to cart</string>
    <string name="price">price</string>
    <string name="product_name">product name</string>
    <string name="product_image">product image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_price">product price</string>


    <string name="_100_dt">100 DT</string>
    <string name="product_details">Product Details</string>
    <string name="image">image</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="login_here">Login here</string>
    <string name="adress">Address</string>
    <string name="phone">Phone</string>
    <string name="last_name">Last name</string>
    <string name="login1">Login</string>
    <string name="checkout">Checkout</string>
    <string name="total_26">Total: $ 26</string>
    <string name="quantity">Quantity</string>
    <string name="delete_product">delete product</string>
    <string name="add">+</string>
    <string name="product_price_detail">product price detail</string>
    <string name="logout">logout</string>
    <string name="edit_profile">edit profile</string>
    <string name="profile_image">profile image</string>
    <string name="splash_logo">splash logo</string>
    <string name="close">close</string>
    <string name="open">open</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="settings">Settings</string>
    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="shopping_basket">shopping basket</string>
    <string name="total_price">total price</string>
    <string name="qty">Qty</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="my_cart">My Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="order_id">order id</string>
    <string name="total_amount">Total amount:</string>
    <string name="ordered_at">Ordered at :</string>
    <string name="delivered_to">Delivered to :</string>
    <string name="order_tag">Order Tag :</string>
    <string name="remember_me">Remember Me</string>
    <string name="product_name_detail">product name detail</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="skip_to_shop">Skip to Shop</string>
    <string name="back_to_shop">Back to Shop</string>
</resources>