<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/orderIdTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_tag"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/orderId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_id"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textColor="@color/black"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderIdTextView"/>

    <TextView
        android:id="@+id/totalAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderIdTextView"/>

    <TextView
        android:id="@+id/totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_amount"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/orderIdTextView"
        app:layout_constraintStart_toEndOf="@+id/totalAmountTextView"/>

    <TextView
        android:id="@+id/orderDateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordered_at"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalAmountTextView"/>

    <TextView
        android:id="@+id/orderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ordered_at"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/orderDateTextView"
        app:layout_constraintTop_toBottomOf="@+id/totalAmountTextView"/>

    <TextView
        android:id="@+id/orderAddressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivered_to"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderDateTextView"/>

    <TextView
        android:id="@+id/orderAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delivered_to"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/orderAddressTextView"
        app:layout_constraintTop_toBottomOf="@+id/orderDateTextView"/>

</androidx.constraintlayout.widget.ConstraintLayout>